5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4150/executions/1585_825.log
== TEST (2019-03-26 10:47:29) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *


raio = float(input("digite o raio: "))

a = (pi*(raio**2)
v = (4/3*pi(raio***3))
	  
print(round(a, 3))
print(round(v,3))
-- ERROR:
File "XXXX", line 10
    v = (4/3*pi(raio***3))
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:48:40) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *


raio = float(input("digite o raio: "))

a = (pi*(raio**2)
v = (4/3*pi*(raio***3))
	  
print(round(a, 3))
print(round(v, 3))
-- ERROR:
File "XXXX", line 10
    v = (4/3*pi*(raio***3))
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:49:10) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *


raio = float(input("digite o raio: "))

a = int((pi*(raio**2))
v = int((4/3*pi*(raio***3)))
	  
print(round(a, 3))
print(round(v, 3))
-- ERROR:
File "XXXX", line 10
    v = int((4/3*pi*(raio***3)))
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:49:34) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *


raio = float(input("digite o raio: "))

a = (pi*(raio**2)
b = (4/3*pi*(raio***3))
	  
print(round(a, 3))
print(round(b, 3))
-- ERROR:
File "XXXX", line 10
    b = (4/3*pi*(raio***3))
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:49:56) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *


raio = float(input("digite o raio: "))

area = (pi*(raio**2)
volume = (4/3*pi*(raio***3))
	  
print(round(area, 3))
print(round(volume, 3))
-- ERROR:
File "XXXX", line 10
    volume = (4/3*pi*(raio***3))
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:53:36) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *


raio = float(input("digite o raio: "))

area = (pi*(raio**2)
volume = (4/3)*(pi)*(raio***3)
	  
print(round(area, 3))
print(round(volume, 3))
-- ERROR:
File "XXXX", line 10
    volume = (4/3)*(pi)*(raio***3)
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:54:00) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *


raio = float(input("digite o raio: "))

area = (pi*(raio**2)
volume = (4/3)*(pi)*(raio**3)
	  
print(round(area, 3))
print(round(volume, 3))
-- ERROR:
File "XXXX", line 10
    volume = (4/3)*(pi)*(raio**3)
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:54:40) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *


raio = float(input("digite o raio: "))

area = (pi*(raio**2)
volume = (4/3)*pi*(raio**3)
	  
print(round(area, 3))
print(round(volume, 3))
-- EXECUTION TIME:
0.128256
-- ERROR:
  File "/home/codebench/codes/1585/825/main.py", line 10
    volume = (4/3)*pi*(raio**3)
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:54:48) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *


raio = float(input("digite o raio: "))

area = (pi*(raio**2)
volume = (4/3)*pi*(raio**3)
	  
print(round(area, 3))
print(round(volume, 3))
-- ERROR:
File "XXXX", line 10
    volume = (4/3)*pi*(raio**3)
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:54:58) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *


raio = float(input("digite o raio: "))

area = (pi*(raio**2)
vl = (4/3)*pi*(raio**3)
	  
print(round(area, 3))
print(round(volume, 3))
-- ERROR:
File "XXXX", line 10
    vl = (4/3)*pi*(raio**3)
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:55:01) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *


raio = float(input("digite o raio: "))

area = (pi*(raio**2)
vl = (4/3)*pi*(raio**3)
	  
print(round(area, 3))
print(round(volume, 3))
-- ERROR:
File "XXXX", line 10
    vl = (4/3)*pi*(raio**3)
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:55:04) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *


raio = float(input("digite o raio: "))

area = (pi*(raio**2)
vl = (4/3)*pi*(raio**3)
	  
print(round(area, 3))
print(round(vl, 3))
-- ERROR:
File "XXXX", line 10
    vl = (4/3)*pi*(raio**3)
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:55:16) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *


raio = float(input("digite o raio: "))

area = (pi*(raio**2)
romeel = (4/3)*pi*(raio**3)
	  
print(round(area, 3))
print(round(romeel, 3))
-- ERROR:
File "XXXX", line 10
    romeel = (4/3)*pi*(raio**3)
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:55:41) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *


raio = float(input("digite o raio: "))

area = (pi*(raio**2))
volume = (4/3)*pi*(raio**3)
	  
print(round(area, 3))
print(round(, 3))
-- ERROR:
File "XXXX", line 13
    print(round(, 3))
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:55:49) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *


raio = float(input("digite o raio: "))

area = (pi*(raio**2))
volume = (4/3)*pi*(raio**3)
	  
print(round(area, 3))
print(round(volume, 3))
-- OUTPUT:
63.617
381.704
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:55:57) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *


raio = float(input("digite o raio: "))

area = (pi*(raio**2))
volume = (4/3)*pi*(raio**3)
	  
print(round(area, 3))
print(round(volume, 3))
-- EXECUTION TIME:
0.212396
-- TEST CASE 1:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
63.617
381.704
-- TEST CASE 2:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
478.388
7871.076
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
